feat: eof
